<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Brave Together</string>
    <!-- Strings related to login -->
    <string name="prompt_email">ID</string>
    <string name="prompt_password">מספר טלפון</string>
    <string name="action_sign_in"> כניסה</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"ברוך הבא"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">מספר הטלפון חייב להכיל 10 ספרות</string>
    <string name="login_failed">"Login failed"</string>
    <string name="red_b">red_b</string>
    <string name="green_b">green_b</string>
    <string name="yellow_b">yellow_b</string>
    <string name="resign">התנתקות</string>
    <string name="phone_no">טלפון</string>
    <string name="id">ID</string>
    <string name="first_fragment_label">frag</string>
    <string name="idlogin">תעודת זהות</string>
    <string name="bdate">תאריך לידה</string>

    <!-- Strings related to admin -->
      <string name="back_to_menu">חזרה לתפריט ראשי</string>
    <string name="assign_volunteer">שיוך מתנדבים</string>
    <string name="admin_welcome_message">שלום, Admin</string>
    <string name="moderator_welcome_message">שלום, Moderator</string>
    <string name="add_new_users">הוספת משתמש</string>
    <string name="id_hero">Id hero</string>
    <string name="braveil">BraveIL - מצעד הגבורה</string>
    <string name="manage_users_btn">ניהול רשימת משתמשים</string>
    <string name="title_activity_admin">Admin</string>
    <string name="second_fragment_label">frag</string>
    <string name="add_moderator">הוספת מודרייטור</string>
    <string name="send">הוספת מודרייטור</string>
    <string name="username">שם משתמש</string>
    <string name="new_mod">יצירת מודרייטור חדש</string>
    <string name="city">עיר מגורים</string>
    <string name="password">סיסמא</string>
    <string-array name="user_type">
        <item>admin</item>
        <item>moderator</item>
        <item>survivor</item>
        <item>volunteer</item>
    </string-array>
    <string name="logout">התנתקות</string>

    <!--dialog strings-->
    <string name="accompany">ליווי,ללוות אותך לסידורים.,accompany</string>
    <string name="call">שיחה,לשוחח איתך בטלפון.,call</string>
    <string name="meeting">פגישה,להיפגש איתך.,meeting</string>
    <string name="delivery">איסוף מוצר,לאסוף עבורך תרופות/מצרכים ועוד..,delivery</string>
    <string name="dialogMessage">תוכל/י לבקש מאחד המתנדבים %1$s\nהאם תרצה/י %2$s?</string>
    <string name="botMessage">שלום מתנדבים יקרים!\n התקבלה בקשה ל%1$s.\nאם את/ה יכול/ה, נא לחץ/י על אישור וצור/צרי קשר עם הגיבור/ה בנייד: %2$s</string>
    <string name="register_image">register_image</string>


</resources>