<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="54dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/red_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone" />

    <ImageButton
        android:id="@+id/meetingButton"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="54dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/green_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meet" />

    <ImageButton
        android:id="@+id/accompanyButton"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="56dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/yellow_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help" />

    <ImageButton
        android:id="@+id/deliveryButton"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginTop="520dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/red_b"
        app:layout_constraintEnd_toEndOf="@+id/meetingButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/meetingButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>